<resources>
    <string name="app_name">MealPlus</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="log_in_button">Log-In</string>
    <string name="register_button">Register</string>
    <string name="todo">TODO</string>
    <string name="mealPlusLogoDescription">meal_plus_logo</string>
    <string name="pathBarRegistrationText"><![CDATA[Registration]]></string>
    <string name="pathBarAdviserRegistrationText"><![CDATA[Registration < Adviser]]></string>
    <string name="foreNameFieldText">Forename*</string>
    <string name="surnameFieldText">Surname*</string>
    <string name="emailFieldText">Email Address*</string>
    <string name="confirmEmailFieldText">Confirm Email Address*</string>
    <string name="passwordFieldText">Password*</string>
    <string name="confirmPasswordFieldText">Confirm Password*</string>
    <string name="mandatoryText">* Field is mandatory</string>

    <string name="registrationNumberFieldText">Registration Number*</string>
    <string name="occupationFieldText">Occupation*</string>
    <string name="Address1FieldText">Address 1*</string>
    <string name="Address2FieldText">Address 2</string>
    <string name="postcodeFieldText">Post Code*</string>
    <string name="phoneNumberFieldText">Phone Number*</string>
    <string name="registerButtonText">Register</string>
    <string name="RegistrationSuccesText">You are now registered</string>
    <string name="loginNavBar">Log-In</string>
    <string name="emailText">Email address</string>
    <string name="passwordText">Password</string>
    <string name="registrationSuccesNavBar"><![CDATA[Registration > Customer > Succes]]></string>
    <string name="mainPageNavBar">Main</string>
    <string name="customerRegistrationNavBar2"><![CDATA[Registration < Customer < Fitness Data]]></string>
    <string name="ageField">Age</string>
    <string name="sizeField">Height  (cm)</string>
    <string name="weightField">Weight (kg)</string>
    <string name="activityLevel">Activity level</string>
    <string name="seekBarLow">Low</string>
    <string name="seekBarMedium">Medium</string>
    <string name="seekBarHigh">High</string>
    <string name="goalText">Goal</string>
    <string name="weighGoalText">Goal</string>
    <string name="weightGoalLoss">Loss</string>
    <string name="weighGoalMaintenance">Maintenance</string>
    <string name="weightGoalGain">Gain</string>
    <string name="changeText">Fitness data can be changed from settings menu</string>

    <string-array name="title">
        <item>Mx</item>
        <item>Mrs</item>
        <item>Ms</item>
        <item>Mr</item>
    </string-array>
    <string name="title_activity_register_adviser_last">RegisterAdviserLast</string>
    <string name="adviserLastNavBar"><![CDATA[Registration < Adviser < Finish]]></string>
    <string name="thankYouText">Thank you for using MealPlus!</string>
    <string name="processingApplicationText">We are now processing you application as an Adviser and will be in touch with you shortly!</string>
    <string name="confirmButtonText">Confirm</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="adviser">Adviser</string>
    <string name="customer">Customer</string>
    <string name="account_type">Account Type</string>
    <string name="calories">Calories</string>
    <string name="carbs">Carbs</string>
    <string name="proteins">Proteins</string>
    <string name="fats">Fats</string>
    <string name="_1600">1600</string>
    <string name="_900">900</string>
    <string name="breakfast">Breakfast</string>
    <string name="snack1">Snack1</string>
    <string name="lunch">Lunch</string>
    <string name="snack2">Snack2</string>
    <string name="dinner">Dinner</string>
    <string name="snack3">Snack3</string>
    <string name="close_dietlog">Close DietLog</string>
    <string name="create_recipe">Create Recipe</string>
    <string name="settings">Settings</string>
    <string name="create_food">Create Food</string>
    <string name="see_past_reports">See Past Reports</string>
    <string name="logout">Logout</string>
    <string name="foods_recipes_other_keywords"><![CDATA[Foods, Recipes & Other Keywords]]></string>
    <string name="search">Search</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="search_for_frequently_eaten">Search for Frequently Eaten</string>
    <string name="search_self_made_foods_and_recipes">Search Self-Made Foods and Recipes</string>
    <string name="amenities">Amenities</string>
    <string name="sellpoints">Sellpoints</string>
    <string name="food_type">Food Type</string>
    <string name="search_customer">Search Customer</string>
    <string name="log_out">Log Out</string>
    <string name="display_associated_customers">Display Associated Customers</string>
    <string name="key_in_account_e_mail">Key in Account E-mail</string>
    <string name="request_settings">Request Settings</string>
    <string name="textview">TextView</string>
</resources>
